EXTRA_DIST = src/queue.h \
             samples \
             tests/ca_certificates \
             tests/certificates \
             tests/configs \
             tests/file_readable \
             tests/keystore_records \
             autogen.sh
SUBDIRS = src . tests
AM_DISTCHECK_CONFIGURE_FLAGS = --disable-dependency-tracking

