EXTRA_DIST = samples \
             test/certificates \
             test/cert_store \
             test/configs \
             test/file_readable \
             test/fingerprints \
             test/keystore_records
SUBDIRS = src . test
AM_DISTCHECK_CONFIGURE_FLAGS = --disable-dependency-tracking

